Fix logo margins on mobile

--- a/css/site.scss
+++ b/css/site.scss
@@ -98,7 +98,7 @@ svg {
             filter: drop-shadow(1px 1px 0 rgba(0,0,0,0.4));
   }
   max-width: 397px;
-  margin-bottom: 1.5rem;
+  margin: 2rem 0 1.5rem 0;
 }
 
 footer {
